# rayca-math

./: Cargo.toml  README.md
src/: lib.rs  mat3.rs  mat4.rs  point3.rs  quat.rs  ray.rs  size2.rs  trs.rs  vec2.rs  vec3.rs
src/color/: mod.rs
